mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
/* ... */
.v-Notification #warningmsg-icon {
	height: 48px;
	width: 48px;
	background: url('icons/48/warn.png') no-repeat left top transparent;
}

.v-label.grayLabel {
	color: gray;
}

/* Cancel Account Page */
.cancelAccountHeader .first-line {
	font-size: 20px;
}

.cancelAccountHeader .header-content {
	text-align: center;
}

.cancelAccountHeader .header-note {
	font-size: 11px;
	color: rgb(137, 137, 137);
}

.cancelAccountBody>.v-csslayout-margin {
	border-top: 15px solid rgb(34, 139, 201);
	background-color: rgb(243, 243, 243);
}

.cancelAccountBody .v-gridlayout>div>div>div {
	padding: 8px;
}

.cancelAccountBody .v-gridlayout .v-label {
	text-align: right;
}

.trialInformBox {
	cursor: pointer;
}

.trialEndingNotification {
	background-color: rgb(232, 160, 82);
	color: white;
	padding: 0px 10px;
	display: table-cell;
	vertical-align: middle;
	cursor: pointer;
}

.trialEndingNotification a {
	color: white;
	display: block;
}

.trialEndingNotification .informBlock {
	display: table-cell;
	vertical-align: middle;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

.trialEndingNotification .informBlock:first-child {
	padding-right: 5px;
}

/* volume usage info */
.v-horizontallayout.border-box2-no-margin.file-topcontrols {
	border-radius: 5px 5px 0px 0px;
}

.v-horizontallayout.border-box2-no-margin.file-topcontrols .v-buttongroup .v-button.v-button-right
	{
	border-radius: 0px 3px 0px 0px;
}

.v-label.volumeUsageInfo {
	display: table;
}

.v-label.volumeUsageInfo div {
	display: table-cell;
}

.v-label.volumeUsageInfo #left-side {
	width: 30px;
	height: 100%;
	background: url('icons/volume-usage-corners.png') no-repeat top left
		transparent;
}

.v-label.volumeUsageInfo #right-side {
	width: 30px;
	background: url('icons/volume-usage-corners.png') no-repeat top right
		transparent;
}

.v-label.volumeUsageInfo #info-content {
	background-color: rgb(190, 167, 118);
	padding: 3px 0px;
	color: white;
	text-align: center;
}

.v-select-optiongroup .v-select-option {
	white-space: pre-wrap;
	line-height: 1.7em;
}

.v-select-optiongroup {
	spacing: true;
}

.timeAdd-popup {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-width: 0px 1px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
	background-color: rgb(245, 245, 245);
}

.timeAdd-popup .popup-header .v-verticallayout-margin {
	padding: 8px 0px 8px 18px;
}

.timeAdd-popup .popup-header {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-bottom: 1px solid rgb(169, 169, 169);
}

